<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newTextNoteDialog"
    android:layout_width="350dp"
    android:layout_height="360dp"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nota_testuale"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titolo_nota_testuale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/titolo_nota_testuale"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/titolo"
        android:textColorHint="#B1B1B1"
        android:textSize="20sp"
        android:background="@drawable/custom_edit_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:singleLine="true"
        android:ellipsize="end"
        android:scrollHorizontally="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contenuto_nota_testuale"
        android:layout_width="match_parent"
        android:layout_height = "wrap_content"
        android:lines="6"
        android:gravity="top"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:hint="@string/contenuto"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        android:textColorHint="#B1B1B1"
        android:textSize="18sp"
        android:background="@drawable/custom_edit_text"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titolo_nota_testuale" />

    <Button
        android:id="@+id/crea_nota_testuale"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="17dp"
        android:backgroundTint="#abebc6"
        android:text="@string/crea"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contenuto_nota_testuale" />

</androidx.constraintlayout.widget.ConstraintLayout>