<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nota_testuale_item"
    android:orientation="vertical"
    android:paddingEnd="5dp"
    android:paddingTop="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#abebc6"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:cardMaxElevation="5dp"
        app:cardPreventCornerOverlap="true"
        >

        <TextView
            android:id="@+id/nota_testuale_titolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:paddingTop="15dp"
            android:text="@string/titolo"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:singleLine="true"
            android:scrollHorizontally="true"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            />

        <TextView
            android:id="@+id/nota_testuale_contenuto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="20dp"
            android:scaleType="fitCenter"
            android:text="@string/contenuto"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="14sp" />

    </androidx.cardview.widget.CardView>

</RelativeLayout>