<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/newPageDialog"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center">

    <EditText
        android:id="@+id/titoloPaginaNote"
        android:layout_width="272dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="33dp"
        android:hint="@string/titolo"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/submit_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/custom_edit_text" />

    <TextView
        android:id="@+id/inserisci_titolo_paginaNote"
        android:layout_width="190dp"
        android:layout_height="46dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="25dp"
        android:text="@string/nuova_pagina_di_note"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/titoloPaginaNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/submit_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="127dp"
        android:layout_marginBottom="68dp"
        android:text="@string/crea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="#6feca4"
        android:textColor="@color/black" />

</androidx.constraintlayout.widget.ConstraintLayout>